# Cini

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  roadmap.txt  version.cmake
lua/: defaults.lua  init.lua  post_init.lua
lua/bindings/: async_process.lua  cini.lua  clipboard.lua  core.lua  cursor.lua  cursor_style.lua  direction.lua  document.lua  document_view.lua  editor.lua  face.lua  key.lua  position.lua  regex.lua  regex_match.lua  rgb.lua  state.lua  user.lua  utf8.lua  util.lua  version.lua  viewport.lua  workspace.lua
lua/core/: clone.lua  commands.lua  face.lua  faces.lua  hooks.lua  hover_actions.lua  keybind.lua  keybinds.lua  mode.lua  mode_line.lua  modes.lua  motions.lua  prompt.lua  quit.lua  theme.lua  util.lua
lua/core/callbacks/: open_document.lua
lua/core/internals/: bind.lua  face.lua  keybind.lua  mode.lua
lua/core/keymap/: global.lua  insert.lua  mini_buffer.lua
lua/core/modes/: global.lua
lua/default/: command.lua  dired.lua  document_viewer.lua  git.lua  global.lua  insert.lua  man_pager.lua  mini_buffer.lua  mode_line.lua  pager.lua  process_viewer.lua  replace.lua  search.lua  selection.lua
lua/default/modes/: dired.lua  document_viewer.lua  global.lua  insert.lua  mini_buffer.lua  pager.lua  replace.lua  search.lua  selection.lua  status_message.lua
lua/modes/: cpp.lua  status_message.lua  text.lua  whitespace.lua
src/: CMakeLists.txt  ansi.cpp  ansi.hpp  async_process.cpp  async_process.hpp  bindings.cpp  cell.cpp  cell.hpp  cli_parser.cpp  cli_parser.hpp  command.hpp  cursor.cpp  cursor.hpp  direction.hpp  display.cpp  display.hpp  document.cpp  document.hpp  document_view.cpp  document_view.hpp  editor.cpp  editor.hpp  face.cpp  face.hpp  face_cache.cpp  face_cache.hpp  face_map.hpp  key.cpp  key.hpp  key_hash.cpp  key_hash.hpp  key_map.hpp  key_mod.hpp  lua_defaults.cpp.in  lua_defaults.hpp  main.cpp  mini_buffer.cpp  mini_buffer.hpp  mode.cpp  mode.hpp  (+19 more)
src/bindings/: async_process.cpp  bindings.hpp  clipboard.cpp  cursor.cpp  cursor_binding.hpp  cursor_style.cpp  direction.cpp  direction_binding.hpp  document.cpp  document_binding.hpp  document_view.cpp  editor.cpp  editor_binding.hpp  face.cpp  face_binding.hpp  key.cpp  key_binding.hpp  mode.cpp  position.cpp  regex.cpp  regex_binding.hpp  regex_match.cpp  regex_match_binding.hpp  rgb.cpp  rgb_binding.hpp  utf8.cpp  utf8_binding.hpp  util.cpp  version.cpp  viewport.cpp  viewport_binding.hpp  window.cpp  workspace.cpp  workspace_binding.hpp
src/container/: face_cache.cpp  face_cache.hpp  mini_buffer.cpp  mini_buffer.hpp  property_map.cpp  property_map.hpp
src/render/: cell.cpp  cell.hpp  display.cpp  display.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp  workspace.cpp  workspace.hpp
src/rendering/: cell.cpp  cell.hpp  display.hpp  window_manager.cpp  window_manager.hpp
src/script/: script_engine.cpp  script_engine.hpp
src/script/bindings/: cursor.cpp  direction.cpp  document.cpp  editor.cpp  face.cpp  key.cpp  regex.cpp  regex_match.cpp  rgb.cpp  viewport.cpp
src/typedef/: command.hpp  face_map.hpp  key_hash.hpp  key_map.hpp  key_special.hpp  replacement_map.hpp  string_hash.cpp  string_hash.hpp
src/types/: direction.hpp  face.cpp  face.hpp  key_mod.hpp  key_special.hpp  mod_key.hpp  operation.hpp  position.hpp  property.cpp  property.hpp  regex_match.hpp  rgb.cpp  rgb.hpp  special_key.hpp  syntax_rule.hpp  transaction.hpp
src/util/: ansi.cpp  ansi.hpp  ansi_parser.cpp  ansi_parser.hpp  ansi_text_stream.cpp  ansi_text_stream.hpp  assert.hpp  fs.cpp  fs.hpp  instance_tracker.hpp  log.cpp  log.hpp  math.hpp  utf8.cpp  utf8.hpp
